# scratch.hs

./: CHANGELOG.md  LICENSE  README.md  Scratch.hs  flake.nix  scratch-hs.cabal  scratch.cabal
.direnv/: flake-profile-1-link
